@startuml

title __ADAPTER's Class Diagram__\n

  namespace com.redrum.todo {
    namespace adapter {
      class com.redrum.todo.adapter.TodoAdapter {
          - detailIntent : Intent
          - editIntent : Intent
          - todoList : List<Todo>
          + TodoAdapter()
          + deleteData()
          + deleteData()
          + getContext()
          + getItemCount()
          + getTodoList()
          + insertData()
          + onBindViewHolder()
          + onCreateViewHolder()
          + update()
          + updateData()
      }
    }
  }
  

  namespace com.redrum.todo {
    namespace adapter {
      class com.redrum.todo.adapter.TodoAdapter.TodoViewHolder {
          + checkBox : CheckBox
          + textView : TextView
          + TodoViewHolder()
      }
    }
  }
  

  com.redrum.todo.adapter.TodoAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.redrum.todo.adapter.TodoAdapter o-- com.redrum.todo.activity.MainActivity : mainActivity
  com.redrum.todo.adapter.TodoAdapter +-down- com.redrum.todo.adapter.TodoAdapter.TodoViewHolder
  com.redrum.todo.adapter.TodoAdapter.TodoViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
